samples/_failures_safe/1761181184_61c214_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a29267ed.c: In function ‘main’:
./samples/SAFE/__tmp_a29267ed.c:138:27: error: missing terminating " character
  138 |         choice = read_int("Select
      |                           ^~~~~~~
./samples/SAFE/__tmp_a29267ed.c:138:9: error: expected expression at end of input
  138 |         choice = read_int("Select
      |         ^~~~~~
./samples/SAFE/__tmp_a29267ed.c:138:18: error: too few arguments to function ‘read_int’
  138 |         choice = read_int("Select
      |                  ^~~~~~~~
./samples/SAFE/__tmp_a29267ed.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_a29267ed.c:138:9: error: expected declaration or statement at end of input
  138 |         choice = read_int("Select
      |         ^~~~~~
./samples/SAFE/__tmp_a29267ed.c:138:9: error: expected declaration or statement at end of input
